Add FastLED as a dependency

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,7 +21,8 @@ lib_deps_builtin =
 	Improv_wifi
 	SkaarhojPgmspace
 	TallyServer
-
+lib_deps_external =
+	FastLED=https://github.com/FastLED/FastLED.git
 
 [env]
 framework = arduino
